# boardgame-server

./: Cargo.toml  log.txt
.github/workflows/: rust.yml
src/: game_state.rs  main.rs  server.rs  utils.rs
src/game_state/: ability_card_deck.rs  action.rs  challenge.rs  client_message.rs  crew.rs  deck.rs  effect.rs  event_deck.rs  game_phase.rs  map.rs  market.rs  player.rs  quest.rs  skill.rs  storybook.rs
src/game_state/action/: accept_challenge_result_action.rs  accept_message_action.rs  choose_token_for_deck_action.rs  confirm_actions.rs  draw_for_deck_action.rs  end_turn.rs  equip_ability_card_action.rs  explore_action.rs  handle_event_phase_action.rs  resolve_challenge_action.rs  select_crew_member_action.rs  select_discard_for_galley_action.rs  select_event_option_action.rs  select_main_action.rs  select_story_option_action.rs  take_ship_action.rs  travel_action.rs
src/game_state/action/snapshots/: sleeping_gods__game_state__action__select_discard_for_galley_action__test__action.snap  sleeping_gods__game_state__action__take_ship_action__test__bridge_action.snap  sleeping_gods__game_state__action__take_ship_action__test__deck_action.snap  sleeping_gods__game_state__action__take_ship_action__test__galley_action.snap
