[package]
name = "sleeping_gods"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.175", features=["derive"]}
serde_json = "1.0.103"
serde_with = "3.1.0"
typetag = "0.2.12"
websocket = "0.26.5"

[dev-dependencies]
insta = { version = "1.31.0", features = ["json"] }
test-case = "3.1.0"
